Se corrigieron las rutas de las imagene

--- a/src/app/founders/founders.component.html
+++ b/src/app/founders/founders.component.html
@@ -5,7 +5,7 @@
 
 <div class="background">
 	<img
-		src="../../assets/images/founders-background.svg"
+		src="assets/images/founders-background.svg"
 		alt="founders-background"
 	/>
 </div>
