--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,18 @@
 <img
 	class="circle"
-	src="../../assets/images/circle-process.svg"
+	src="assets/images/circle-process.svg"
 	alt="circle-process"
 />
 
 <div class="social">
 	<p>Siguenos en</p>
-	<img src="../../assets/images/facebook-logo.svg" alt="Facebook" />
-	<img src="../../assets/images/twitter-logo.svg" alt="Twitter" />
-	<img src="../../assets/images/instagram-logo.svg" alt="Instagram" />
+	<img src="assets/images/facebook-logo.svg" alt="Facebook" />
+	<img src="assets/images/twitter-logo.svg" alt="Twitter" />
+	<img src="assets/images/instagram-logo.svg" alt="Instagram" />
 </div>
 
 <div class="main">
-	<img src="../../assets/images/cubipool-logo.png" alt="Cubipool-logo" />
+	<img src="assets/images/cubipool-logo.png" alt="Cubipool-logo" />
 
 	<p>Reserva y comparte cubiculos</p>
 
@@ -21,6 +21,6 @@
 
 <img
 	class="wave-bottom"
-	src="../../assets/images/wave-1-bottom.svg"
+	src="assets/images/wave-1-bottom.svg"
 	alt="wave-bottom"
 />
