--- a/src/app/founders/founders.component.scss
+++ b/src/app/founders/founders.component.scss
@@ -1,5 +1,5 @@
 :host {
-	width: 100%;
+	width: 100vw;
 	height: 100vh;
 
 	display: grid;
@@ -28,7 +28,7 @@
 		grid-column: 1 / span 1;
 		grid-row: 2 / span 1;
 
-        padding: 32px;
+		padding: 32px;
 
 		img {
 			max-width: 100%;
@@ -75,6 +75,69 @@
 					font-size: 24px;
 				}
 			}
+		}
+	}
+}
+
+@media (max-width: 600px) {
+	:host {
+		grid-template-columns: 1fr;
+
+		.content {
+			grid-column: 1 / span 1;
+			grid-row: 1 / span 1;
+
+			margin-left: 16px;
+
+			h1 {
+				font-size: 28px;
+			}
+
+			p {
+				font-size: 16px;
+			}
+		}
+
+		.founders {
+			grid-column: 1 / span 1;
+			grid-row: 2 / span 1;
+
+			margin-top: 16px;
+
+			flex-flow: row wrap;
+			justify-content: space-around;
+
+			.founder {
+				margin-bottom: 24px;
+
+				.image {
+					width: 65px;
+					height: 65px;
+
+					img {
+						max-height: 75px;
+					}
+				}
+
+				.info {
+					margin-left: 8px;
+
+					h1 {
+						font-size: 16px;
+					}
+
+					p {
+						font-size: 10px;
+					}
+				}
+			}
+		}
+
+		.background {
+			grid-column: 1 / span 1;
+			grid-row: 3 / span 1;
+
+			padding: 16px;
 		}
 	}
 }
