--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-home></app-home>
-<app-application></app-application>
-<app-videos></app-videos>
-<app-founders></app-founders>
+<div class="container">
+	<app-home></app-home>
+	<app-application></app-application>
+	<app-videos></app-videos>
+	<app-founders></app-founders>
+</div>
