--- a/src/app/founders/founders.component.scss
+++ b/src/app/founders/founders.component.scss
@@ -1,121 +1,65 @@
-:host {
+.container {
 	height: 100vh;
 
-	display: grid;
-	grid-template-columns: 1fr 400px;
-}
-
-.content {
-	grid-column: 1 / span 1;
-	grid-row: 1 / span 1;
-
-	margin: 8px;
-
-	margin-left: 32px;
-
-	h1 {
-		margin-bottom: 8px;
-		font-size: 48px;
-	}
-
-	p {
-		color: #707070;
-		font-size: 28px;
-	}
-}
-
-.background {
-	grid-column: 1 / span 1;
-	grid-row: 2 / span 1;
-
-	padding: 32px;
-
-	img {
-		max-width: 100%;
-	}
-}
-
-.founders {
-	grid-column: 2 / span 1;
-	grid-row: 2 / span 2;
-
 	display: flex;
-	flex-flow: column nowrap;
-
-	.founder {
-		margin-bottom: 48px;
-
-		display: flex;
-		flex-flow: row nowrap;
-		align-items: center;
-
-		.image {
-			width: 100px;
-			height: 100px;
-			background-color: #dddddd;
-
-			display: flex;
-			flex-flow: row nowrap;
-			justify-content: center;
-			align-items: center;
-
-			overflow: hidden;
-
-			border-radius: 50%;
-
-			img {
-				max-height: 100px;
-			}
-		}
-
-		.info {
-			margin-left: 16px;
-			h1 {
-				font-weight: normal;
-				font-size: 24px;
-			}
-		}
-	}
-}
-
-@media (max-width: 600px) {
-	:host {
-		grid-template-columns: 1fr;
-	}
+	flex-flow: row wrap;
+	align-items: flex-start;
 
 	.content {
-		grid-column: 1 / span 1;
-		grid-row: 1 / span 1;
-
-		margin-left: 16px;
+		width: 100%;
+		margin: 8px;
+		margin-left: 32px;
 
 		h1 {
-			font-size: 28px;
+			margin-bottom: 8px;
+			font-size: 48px;
 		}
 
 		p {
-			font-size: 16px;
+			color: #707070;
+			font-size: 28px;
 		}
 	}
 
 	.founders {
-		grid-column: 1 / span 1;
-		grid-row: 2 / span 1;
+		width: 100%;
+		padding: 0 32px;
 
-		margin-top: 16px;
-
+		display: flex;
 		flex-flow: row wrap;
-		justify-content: space-around;
+		justify-content: center;
 
 		.founder {
-			margin-bottom: 24px;
+			width: 350px;
+			margin-bottom: 32px;
+			margin-right: 32px;
+			padding: 8px 16px;
+			border-radius: 7px;
+
+			display: flex;
+			flex-flow: row nowrap;
+			align-items: center;
+
+			box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
+			cursor: pointer;
 
 			.image {
-				width: 65px;
-				height: 65px;
+				width: 100px;
+				height: 100px;
+				background-color: #ffffff;
+
+				display: flex;
+				flex-flow: row nowrap;
+				justify-content: center;
+				align-items: center;
+
+				overflow: hidden;
+				border-radius: 50%;
 
 				img {
-					max-height: 75px;
+					max-height: 100px;
+					max-width: 100px;
 				}
 			}
 
@@ -123,20 +67,10 @@
 				margin-left: 8px;
 
 				h1 {
-					font-size: 16px;
-				}
-
-				p {
-					font-size: 10px;
+					font-weight: normal;
+					font-size: 24px;
 				}
 			}
 		}
-	}
-
-	.background {
-		grid-column: 1 / span 1;
-		grid-row: 3 / span 1;
-
-		padding: 16px;
 	}
 }
